Basic functionality working

--- a/style.css
+++ b/style.css
@@ -1,1 +1,78 @@
+.container {
+    display: flex;
+}
 
+.column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form-container{
+    display: flex;
+    align-items: center;
+}
+
+.title {
+    flex-grow: 1;
+    font-family: 'Bebas Neue', cursive;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-item {
+    flex-basis: 100%
+}
+
+h1 {
+    padding: 1em;
+}
+
+h6 {
+    margin: 0.1em;
+    flex-wrap: column wrap;
+}
+
+.movies-grid {
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.text {
+    font-family: 'Roboto', sans-serif;
+}
+
+input{
+    margin: 0.6em;
+}
+.movie-card {
+    align-items: flex-start;
+    padding: 0.5em;
+    justify-content: flex-start;
+    align-content: flex-start;
+    max-width: 200px;
+}
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+    flex-direction: column;
+    align-items: flex-start;
+}
